--- a/app/src/main/res/layout/activity_view_incident.xml
+++ b/app/src/main/res/layout/activity_view_incident.xml
@@ -28,9 +28,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/relativeLayout"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentStart="true">
         <LinearLayout
 
             android:id="@+id/lay_LinearLogin"
@@ -38,9 +38,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="1"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="29dp">
 
 
 
@@ -52,12 +53,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="ID"
+                android:text="ID"
                 android:inputType="number"
                 android:textColor="#ffff"/>
 
             <TextView
                 android:layout_margin="15dp"
                 android:inputType="text"
+                android:text="Reporter"
                 android:textColorHint="#ffffff"
                 android:hint="Reporter Name "
                 android:id="@+id/reporterName"
@@ -75,6 +78,7 @@
                 android:inputType="text"
                 android:textColorHint="#ffffff"
                 android:hint="Type "
+                android:text="Type"
                 android:id="@+id/type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -84,6 +88,7 @@
                 android:layout_margin="15dp"
                 android:textColorHint="#ffffff"
                 android:inputType="text"
+                android:text="R_Person"
                 android:hint="Responsible Person | Authority  "
                 android:id="@+id/responser"
                 android:textColor="#ffff"
@@ -98,6 +103,7 @@
                 android:layout_margin="15dp"
                 android:inputType="textMultiLine"
                 android:hint="Note :"
+                android:text="Note :"
                 android:textColorHint="#ffffff"
                 android:id="@+id/note"
                 android:textColor="#ffff"
@@ -124,6 +130,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="#ffff"
                     android:hint="Date"
+                    android:text="Date"
                     android:inputType="date"
                     android:layout_centerVertical="true"
                     android:layout_alignParentLeft="true"
@@ -137,6 +144,7 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:textColor="#ffff"
+                    android:text="Time"
                     android:hint="Time"
                     android:inputType="time"
                     android:layout_alignBaseline="@+id/date"
@@ -146,25 +154,31 @@
 
             </RelativeLayout>
 
-            <Button
-                android:id="@+id/editBT"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_gravity="right"
-                android:layout_weight="0.07"
-                android:text="Edit" />
-
-            <Button
-                android:id="@+id/deleteBTN"
-                android:text="Delete"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_gravity="right"
-                android:layout_weight="0.07" />
-
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/deleteBTN"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="right"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="0.07"
+            android:text="Delete" />
+
+        <Button
+            android:id="@+id/editBT"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="right"
+            android:layout_weight="0.07"
+            android:text="Edit"
+            android:layout_above="@+id/deleteBTN"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
 
     </RelativeLayout>
